--- a/chub/templates/chub/Q7.html
+++ b/chub/templates/chub/Q7.html
@@ -31,7 +31,7 @@
            
 
                 <div class="size3  " style="color: rgba(247, 234, 205, 0.91);">
-                    There are 25 horses in a stable. The owner of the stable wants to find out the fastest 3 horses so that he can use them in the upcoming horse race whose winning amount is $1000. He has a track which is 10 m in width. Each horse occupy 2m  of width. How many minimum number of races he had to conduct in order to find the fastest 3 horses? 
+                    There are 25 horses in a stable. The owner of the stable wants to find out the fastest 3 horses so that he can use them in the upcoming horse race whose winning amount is $1000. He has a track which is 10 meters in width. Each horse occupy 2 meters of width. How many minimum number of races he had to conduct in order to find the fastest 3 horses so that he gets a chance to win $1000? 
 
                 </div>
                 <br>
