--- a/chub/templates/chub/Q8.html
+++ b/chub/templates/chub/Q8.html
@@ -27,7 +27,7 @@
 
         <div class="size3 ">
 
-            <p style="color: rgba(247, 234, 205, 0.91);"> Consider a row of 12 coins each having a value written on it. You play a game against an opponent by alternating turns. In each turn, a player selects either the first or last coin from the row, removes it from the row permanently, and receives the value of the coin. Determine the maximum possible amount of money we can definitely win. Because you have qualified technothlon you are given the chance to move first. 
+            <p style="color: rgba(247, 234, 205, 0.91);"> Consider a row of 12 coins each having a value written on it. You play a game against an IItian by alternating turns. In each turn, a player selects either the first or last coin from the row, removes it from the row permanently, and receives the value of the coin. Determine the maximum possible amount of money we can definitely win. Because you have qualified Technothlon you are given the chance to move first. 
                 <br><br>
 
               Note: The opponent is as clever as you. 
