--- a/chub/templates/chub/Q8.html
+++ b/chub/templates/chub/Q8.html
@@ -42,15 +42,19 @@
             <span style="padding-left: 4%;padding-right: 5%;">8</span>
             <span style="padding-left: 4%;padding-right: 5%;">7</span>
             <span style="padding-left: 4%;padding-right: 5%;">5</span>
+            <span style="padding-left: 4%;padding-right: 5%;">9</span>
+            <span style="padding-left: 4%;padding-right: 5%;">11</span>
+            <span style="padding-left: 4%;padding-right: 5%;">4</span>
+            <span style="padding-left: 4%;padding-right: 5%;">6</span>
 
-            <!--     Answer -   35   -->
+            <!--     Answer -   52   -->
         </p>
         <br>
        
         <hr>
     <br>
         <p>
-            Adolf Hitler ( 20 April 1889 – 30 April 1945) was an Austrian-born German politician who was the dictator of Germany from 19<a onclick="window.location.replace('{% url "1" %}')">33</a> until his death in 1945. He rose to power as the leader of the Nazi Party,[a] becoming the chancellor in 1933 and then assuming the title of Führer und Reichskanzler in 19<a onclick="window.location.replace('{% url "24" %}')">35</a>.[b] During his dictatorship, he initiated World War II in Europe by invading Poland on 1 September 1939. He was closely involved in military operations throughout the war and was central to the perpetration of the Holocaust, the genocide of about 6 million Jews and millions of other victims.
+            Adolf Hitler ( 20 April 1889 – 30 April 1945) was an Austrian-born German politician who was the dictator of Germany from 19<a onclick="window.location.replace('{% url "1" %}')">33</a> until his death in 1945. He rose to power as the leader of the Nazi Party,[a] becoming the chancellor in 1933 and then assuming the title of Führer und Reichskanzler in 19<a onclick="window.location.replace('{% url "24" %}')">52</a>.[b] During his dictatorship, he initiated World War II in Europe by invading Poland on 1 September 1939. He was closely involved in military operations throughout the war and was central to the perpetration of the Holocaust, the genocide of about 6 million Jews and millions of other victims.
         </p>
 
         <p>
