input pages final

--- a/chub/templates/chub/Q12.html
+++ b/chub/templates/chub/Q12.html
@@ -41,7 +41,7 @@
                     <input type="text" name="Answer">
                 </div>
                     <div>
-                        <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                        <button class="button "><a >Submit</a></button>
                     </div>
                 
 
