--- a/chub/templates/chub/Q3.html
+++ b/chub/templates/chub/Q3.html
@@ -40,7 +40,7 @@
                         <input type="text" name="Answer">
                     </div>
                         <div>
-                           <a>Submit</a>
+                            <button class="button "><a >Submit</a></button>
                         </div>
                     
     
