--- a/chub/templates/chub/Q10.html
+++ b/chub/templates/chub/Q10.html
@@ -27,7 +27,7 @@
 
         <div class="size3 ">
             <p style="color: rgba(247, 234, 205, 0.91);">
-                A snail is trying to climb a wall 40 ft tall. It climbs 4ft every hour and drops down 2 ft in the same hour. How much time will it take to climb up the wall for the snail.
+                A hungry snail is in search of food and out of the blue he sees a piece of sweet on a wall 40 ft high. It climbs 4 ft every hour and drops down 2 ft in the same hour. How much time will it take to climb up the wall for the snail and satisfies its hunger.
             <p>
 
                 <br>
