--- a/chub/templates/chub/Q11.html
+++ b/chub/templates/chub/Q11.html
@@ -32,7 +32,7 @@
             <div class="flex direction">
 
                 <div class="size3  ">
-                   <p>There are 2 doors in a room , one to heaven and other to hell. One door has a angel and other door has a devil disguised as angel. The angel always tells the truth and the devil always tells lie. You want to go to heaven but neither you know which door is the door to heaven nor do you know who is actual angel and who is the devil. You are allowed to ask only one question to any one of them and find the door to the heaven. You asked anyone of them  
+                   <p>There are 2 doors in a room , one to heaven where you receive salvation and other to hell where you will get tortured for every wrong you din in your life.. One door has a angel and other door has a devil disguised as angel. The angel always tells the truth and the devil always tells lie. You want to go to heaven but neither you know which door is the door to heaven nor do you know who is actual angel and who is the devil. You are allowed to ask only one question to any one of them and find the door to the heaven. You asked anyone of them  
 
                     “what door will the other guard say if I ask him which is the door to hell?” 
                     </p>
