--- a/chub/templates/chub/Q12.html
+++ b/chub/templates/chub/Q12.html
@@ -28,7 +28,7 @@
             <div class="flex direction">
 
                 <div class="size3  ">
-                   <p>There are 71 demons in a village and 1 man who is sleeping because it was night time. The demon can eat the man and himself fall asleep and any other demon can eat him and so on. The demons are very hungry but staying alive is their highest priority. Also the demons are intelligent like you. So will the man be alive or dead in the morning? 
+                   <p>There are 71 demons in a village and 1 man who is sleeping because it was night time. The demon can eat the man and himself fall asleep and any other demon can eat him and fall asleep and so on. The demons are very hungry but staying alive is their highest priority. Also the demons are intelligent like you. So will the man be alive or dead in the morning? 
                        </p>
                    
                     <br><br>
