--- a/chub/templates/chub/Q15.html
+++ b/chub/templates/chub/Q15.html
@@ -32,9 +32,9 @@
                     <br>
                     1 - 4 hrs - 2 - 3 hrs - 3 - 8 hrs - 4 - 2 hrs - 5 - 6 hrs - 6 - 5 hrs - 7 
                    <br> 
-                    Train B can start moving from ith station only when train A has reached (i+1)th station otherwise has to wait. 
+                    Train B can start moving from any station only when train A has reached the next station otherwise it has to wait. 
                     
-                    Find the time taken by train B to reach station 7      
+                    Find the time taken by train B to reach station 7.      
                       </p>
                    
                     <br><br>
