--- a/chub/templates/chub/Q17.html
+++ b/chub/templates/chub/Q17.html
@@ -27,7 +27,7 @@
 
         <div class="size3 ">
 
-            <p style="color: rgba(247, 234, 205, 0.91);"> A man has 53 socks in his drawer , 21 identical blue , 15 identical black , 17 identical red. The man is unfortunately blind. How many minimum number of socks he must take out in order to make sure he has a pair of black socks.   
+            <p style="color: rgba(247, 234, 205, 0.91);">Mr. Evan who is an engineer by profession is getting retired after working in Amazon for more than 20 years. His collegues has arranged a farewell party for him and invited him. He has dressed up as a gentle man but he is missing a pair of black socks to match his shoes. He has 53 socks in his drawer , 21 identical blue , 15 identical black , 17 identical red. Unfortunately there is a power cut in his house so he cannot perfectly identify the colors of socks . Can you help him by telling him how many minimum number of socks he must take out from his drawer in order to make sure he has a pair of black socks.   
             </p><br><br>
 
 
