final input changes

--- a/chub/templates/chub/Q11.html
+++ b/chub/templates/chub/Q11.html
@@ -65,7 +65,7 @@
     let correct =true;
         document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
           e.preventDefault()
-            if(document.getElementById("input").value!='B')   
+            if(document.getElementsByTagName("input")[0].value!='B')   
             { 
                 var data={
                     question: 11,    
