--- a/chub/templates/chub/Q18.html
+++ b/chub/templates/chub/Q18.html
@@ -57,7 +57,7 @@
     let correct =true;
         document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
           e.preventDefault()
-            if(document.getElementById("input").value.toLowerCase()!='heroine')   
+            if(document.getElementsByTagName("input")[0].value.toLowerCase()!='heroine')   
             { 
                 var data={
                     question: 18,    
