--- a/chub/templates/chub/Q21.html
+++ b/chub/templates/chub/Q21.html
@@ -81,7 +81,7 @@
     let correct = true;
     document.getElementsByTagName("a")[0].addEventListener("click", (e) => {
         e.preventDefault()
-        if (document.getElementById("input").value.toLowerCase() != 'heroine') {
+        if (document.getElementsByTagName("input")[0].value.toLowerCase() != 'heroine') {
             var data = {
                 question: 21,
                 score: 0,
