--- a/chub/templates/chub/Q1.html
+++ b/chub/templates/chub/Q1.html
@@ -58,7 +58,7 @@
 let correct =true;
 document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
   e.preventDefault()
-    if(document.getElementById("input").value!=3)   
+    if(document.getElementsByTagName("input")[0].value!=3)   
     { 
         var data={
             question: 1,    
@@ -81,10 +81,10 @@ document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
     }) 
     if(correct==true)
     {
-        window.location.replace('{% url "3" %}')
+        window.location.replace("{% url "3" %}")
     }
     else{
-        window.location.replace('{% url "12" %}')
+        window.location.replace("{% url "12" %}")
     }
  
  } )
