--- a/chub/templates/chub/Q21.html
+++ b/chub/templates/chub/Q21.html
@@ -27,7 +27,8 @@
 
 
         <div class="size3">
-            You have been trapped in a room and the door has a password lock on it. The password is of 9 digits,
+            One step away from the Super Power. Final question to solve to receive the reward for your hard work!! <br>
+            One of your enemies made you trapped in a room which had only a small window and a door with a password protected lock. After looking here and there for an hour you noticed that there is a piece of paper in your pocket. It had the following written on it, the password is of 9 digits,
             which contain each of the digit from 1 to 9. The number is divisible by 9 when the number of digits
             is 9. When we remove the last digit the number of digits become 8 and the number is divisible by 8
             and so on. There is increasing poisonous gas in the room. Can you find out the password to save
