--- a/chub/templates/chub/Q1.html
+++ b/chub/templates/chub/Q1.html
@@ -59,7 +59,7 @@ let correct =true;
 document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
   e.preventDefault()
 
-    if(document.getElementByTagName("input")[0].value!=3)   
+    if(document.getElementsByTagName("input")[0].value!=3)   
     { 
         var data={
             question: 1,    
