--- a/chub/templates/chub/Q15.html
+++ b/chub/templates/chub/Q15.html
@@ -63,7 +63,7 @@
     let correct =true;
         document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
           e.preventDefault()
-            if(document.getElementsByTagName("input")[0].value!='B')   
+            if(document.getElementsByTagName("input")[0].value.toLowerCase()!='36 hrs')   
             { 
                 var data={
                     question: 15,    
