--- a/chub/templates/chub/Q24.html
+++ b/chub/templates/chub/Q24.html
@@ -63,15 +63,17 @@
 </p>
             <Ol style="align-items: center;display:flex; flex-direction:column; line-height: 50px">
                 <li >
-                    <a onclick="window.location.replace('{% url "21" %}')"> X</a>
+                    <a onclick="window.location.replace('{% url "4" %}')"> X</a>
                 </li>
                 <li>
-                    <a onclick="window.location.replace('{% url "20" %}')">Y</a>
+                    <a onclick="window.location.replace('{% url "11" %}')">Y</a>
                 </li>
                 <li>
-                    <a onclick="window.location.replace('{% url "19" %}')">Z</a>
+                    <a onclick="window.location.replace('{% url "16" %}')">Z</a>
                 </li>
-               
+                <li>
+                    <a onclick="window.location.replace('{% url "17" %}')">Can't predict </a>
+                </li>
                 
           
            
