--- a/chub/templates/chub/Q12.html
+++ b/chub/templates/chub/Q12.html
@@ -57,7 +57,7 @@
     let correct =true;
         document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
           e.preventDefault()
-            if(document.getElementsByTagName("input")[0].value.toLowerCase()!='b')   
+            if(document.getElementsByTagName("input")[0].value.toLowerCase()!='dead')   
             { 
                 var data={
                     question: 12,    
