--- a/chub/templates/chub/Q22.html
+++ b/chub/templates/chub/Q22.html
@@ -54,7 +54,7 @@
     let correct =true;
         document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
           e.preventDefault()
-            if(document.getElementsByTagName("input")[0].value.toLowerCase()!='a')   
+            if(document.getElementsByTagName("input")[0].value.toLowerCase()!='me')   
             { 
                 var data={
                     question: 22,    
