--- a/chub/templates/chub/Q9.html
+++ b/chub/templates/chub/Q9.html
@@ -49,6 +49,9 @@
     </div>
     <style>
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
+        a{
+            color:red;
+         }
         </style>
 </body>
 <script>
