--- a/chub/templates/chub/Q1.html
+++ b/chub/templates/chub/Q1.html
@@ -29,7 +29,8 @@
             <div class="flex direction">
 
                 <div class="size3  ">
-                    You have 4 chain pieces with 3 loops each. You can cut any loop and join it to any other loop. How many minimum number of cuts will be required to make a circular chain. 
+                    The city in which Prabhav lived have many thieves. He have a cycle which his father gifted him on his birthday and which is very precious for him. In order to prevent his cycle from getting stolen he goes to market to buy a circular chain and a lock but Unfortunately all the circular chains were sold 10 minutes before his arrival. 
+                    Luckily he got a broken chain in the garden. There were 4 chain pieces with 3 loops each. He can cut any loop and join it to any other loop. Prabhav has some pain in his right arm so he wants to make the circular chain with minimun effort. How many minimum number of cuts will be required to make a circular chain. 
 
                 </div>
             </div>
