--- a/chub/static/css/login.css
+++ b/chub/static/css/login.css
@@ -41,7 +41,7 @@ body{
     align-items: center;
 
     height:75vh;
-    
+    width: 70%;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
    
