--- a/chub/templates/chub/Q21.html
+++ b/chub/templates/chub/Q21.html
@@ -102,13 +102,7 @@
             },
             body: JSON.stringify(data)
         })
-        // if(correct==true)
-        // {
-        //     window.location.replace('{% url "9" %}')
-        // }
-        // else{
-        //     window.location.replace('{% url "6" %}')
-        // }
+        window.location.replace("{% url "end" %}")
 
     })
 
