--- a/chub/templates/chub/Endpage.html
+++ b/chub/templates/chub/Endpage.html
@@ -26,6 +26,8 @@
             <div class="flex direction">
 
                 <div class="size3  ">
+
+                    <img src="../../static/images/technotholon.png">
                  Congratulations!! You have made it to the end!!
                  <br>
                  You proved that you are the deserving one for the Super Power.<br>
