--- a/chub/templates/chub/guidelines.html
+++ b/chub/templates/chub/guidelines.html
@@ -27,7 +27,7 @@
 
         <div class="size3 flex ">
             <div class="size3 flex ">
-
+                <p><b>Read the Rules and Guidelines carefully as you won't be able read this page again</b></p>
                 <p> You went to a magical forest to find some super power. The forest being magical contains trees which can speak because it contains spirit of noble men who would guide only the deserving towards the super power. 
                     At each turn the noble men would ask you one question and help you with the way ahead if you give the correct answer or send you to some other random tree, can be the one with whom you already had a talk before, on answering wrong. 
                 </p>
@@ -40,6 +40,7 @@
                     <p>In this type of questions the noble men will ask you question and you need to tell the correct answer. Type the answer in the space provided and submit it. In case the answer is a word, you can submit it in any case thai is upper or lower case (your wish). </p>
                 </ul>
                 <p>Are you the derserving one to get the super power?? This is the chance to prove yourself. All the best!!!</p>
+                <p>Note: The answers can be partial words or part of a word. </p>
             </div>
         </div>
 
