--- a/chub/templates/chub/login.html
+++ b/chub/templates/chub/login.html
@@ -54,7 +54,7 @@
                     <div class="error">{{form.username.errors|striptags}}
                         {{form.password.errors|striptags}}</div>
                     
-                    <button class="button"><a onclick="window.location.replace('{% url "guide" %}')">Login</a></button>
+                    <button class="button">Login</button>
                 </form>
           
             </div>
