--- a/chub/templates/chub/guidelines.html
+++ b/chub/templates/chub/guidelines.html
@@ -40,7 +40,7 @@
                     <p>In this type of questions the noble men will ask you question and you need to tell the correct answer. Type the answer in the space provided and submit it. In case the answer is a word, you can submit it in any case thai is upper or lower case (your wish). </p>
                 </ul>
                 <p>Are you the derserving one to get the super power?? This is the chance to prove yourself. All the best!!!</p>
-                <p>Note: The answers can be partial words or part of a word. </p>
+                <p>Note: The answers can be partial words or part of a word!! </p>
             </div>
         </div>
 
