--- a/chub/templates/chub/guidelines.html
+++ b/chub/templates/chub/guidelines.html
@@ -41,6 +41,7 @@
                 </ul>
                 <p>Are you the derserving one to get the super power?? This is the chance to prove yourself. All the best!!!</p>
                 <p>Note: The answers can be partial words or part of a word!! </p>
+                <p>All The Best!!!</p>
             </div>
         </div>
 
