--- a/chub/templates/chub/register.html
+++ b/chub/templates/chub/register.html
@@ -45,9 +45,13 @@
                         <br>
                         {{form.username}}
                         <br>
-                        {{form.password.label}}
+                        {{form.password1.label}}
                         <br>
-                        {{form.password}}
+                        {{form.password1}}
+                        <br>
+                        {{form.password2.label}}
+                        <br>
+                        {{form.password2}}
                         <br>
                     </div>
 <br>
@@ -58,6 +62,7 @@
                 </form>
           
             </div>
+
         </div>
     </div>
 
