--- a/chub/static/css/login.css
+++ b/chub/static/css/login.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0%;
+    padding: 0%;
+}
 body{
 
     background-color:black;
@@ -7,12 +11,14 @@ body{
     margin: 0px;
     width: 100%;
    padding-left: 20px;
-   padding-top: 20px;
+   /* padding-top: 20px; */
    padding-bottom: 20px;
    padding-right: 20px;
     font-family:'Avenir LT Std';
     background-image: url('Frame.png');
     margin-bottom: 5%;
+    height: 100%;
+    overflow: hidden;
 }
 .margin5{
     height: 100px;
@@ -38,8 +44,6 @@ body{
 .flex1{
     display: flex;
     justify-content: center;
-    align-items: center;
-
     height:75vh;
     width: 70%;
     border-top-right-radius: 15px;
