--- a/chub/templates/chub/Q6.html
+++ b/chub/templates/chub/Q6.html
@@ -1,4 +1,5 @@
 {%load static %}
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TECHNOTHLON</title>
-    <link rel="stylesheet" href="{% static '/css/style2.css' %}">
+    <link rel="stylesheet" href="..\css\style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="http://fonts.cdnfonts.com/css/avenir-lt-std" rel="stylesheet">
@@ -17,7 +18,7 @@
     <div class="flex direction">
         <div class="size flex ">
             <!-- TECHNOTHLON 2K22 -->
-            <img src="{% static '/images/Technothlon white.svg'%}" class="img1" alt="">
+            <img src="..\images\Technothlon white.svg" alt="">
         </div>
         <div class="flex direction font_size">
             Round 6
@@ -28,38 +29,40 @@
 
         <div class="size3  ">
             <div class="size3  " style="color: rgba(247, 234, 205, 0.91);">
-                A thief wants to loot houses. He knows the amount of money in each house. He cannot loot two consecutive houses. There are 8 houses with the following money
+                There was a thief who always wanted to steal something big but never got a chance to do so. One day while he was passing by the river he saw a goat tied to the fence with a thin brown rope. The height of the goat was 80 cm and its weight was 150 pounds. The thief saw a white piece of paper between the lips of the goat. 
+                He takes the piece of paper and to his surprise he found out that the paper contained a map of a village where only rich people lived. He saw this as an opportunity to steal something big which he always wanted to do. Then he reveals us his intentions as to why he wanted to steal big. He wanted to build a free school for the children of his village but he was neither rich nor he was educated so he was unable to so. He did not want any other child to become a thief in future.
+                He packed some foood with him and a bottle of cold water with him and began his journey towards the rich village. Upon reaching the village he noticed some strange things. There were only 11 houses in a row in the village and each house had some number written outside it. Soon he came to know that the numbers represented the amount of gold coins in the house. The people of the village were jealous of each other and were in a rat race to earn more than the other.
+                Also he noticed that the people of a particular house exchange words only with people of the adjacent houses. So if he steals something from a house then he cannot steal from the adjacent house as the people living that house would know that a thief is coming to steal their stuffs. Given below is the series of numbers written outside the houses.
+                Can you find out how many gold coins can he loot at maximum from the village and fulfill his intentions.
                 <br> 
                 <br>
-                <span style="padding-left: 4%;padding-right: 5%;">5</span>
-                <span style="padding-left: 4%;padding-right: 5%;">5</span>
-                <span style="padding-left: 4%;padding-right: 5%;">10</span>
-                <span style="padding-left: 4%;padding-right: 5%;">50</span>
-                <span style="padding-left: 4%;padding-right: 5%;">25</span>
-                <span style="padding-left: 4%;padding-right: 5%;">100</span>
-                <span style="padding-left: 4%;padding-right: 5%;">10</span>
-                <span style="padding-left: 4%;padding-right: 5%;">5</span>
-                <br><br>
-                Find the maximum amount of money he can loot.
-
-
-
-
+                <span style="padding-left: 2%;padding-right: 5%;">97</span>
+                <span style="padding-left: 2%;padding-right: 5%;">86</span>
+                <span style="padding-left: 2%;padding-right: 5%;">94</span>
+                <span style="padding-left: 2%;padding-right: 5%;">95</span>
+                <span style="padding-left: 2%;padding-right: 5%;">74</span>
+                <span style="padding-left: 2%;padding-right: 5%;">99</span>
+                <span style="padding-left: 2%;padding-right: 5%;">88</span>
+                <span style="padding-left: 2%;padding-right: 5%;">73</span>
+                <span style="padding-left: 2%;padding-right: 5%;">96</span>
+                <span style="padding-left: 2%;padding-right: 5%;">90</span>
+                <span style="padding-left: 2%;padding-right: 5%;">91</span>
                 <br>
                 <br>
-
-               
             </div>
-<p>The Antonine Wall, known to the Romans as Vallum Antonini, was a turf fortification on stone foundations, built by the Romans across what is now the Central Belt of Scotland, between the Firth of Forth and the Firth of Clyde. Built some <a onclick="window.location.replace('{% url "5" %}')">50</a> years after Hadrian's Wall to the south, and intended to supersede it, while it was garrisoned it was the northernmost frontier barrier of the Roman Empire. It spanned approximately <a onclick="window.location.replace('{% url "8" %}')">125</a> kilometres and was about 3 metres (10 feet) high and 5 metres (16 feet) wide. Lidar scans have been carried out to establish the length of the wall and the Roman distance units used. Security was bolstered by a deep ditch on the northern side. It is thought that there was a wooden palisade on top of the turf. The barrier was the second of two "great walls" created by the Romans in Great Britain in <a onclick="window.location.replace('{% url "24" %}')">160</a> AD. Its ruins are less evident than those of the better-known and longer Hadrian's Wall to the south, primarily because the turf and wood wall has largely weathered away, unlike its stone-built southern predecessor.
+<p>The Antonine Wall, known to the Romans as Vallum Antonini, was a turf fortification on stone foundations, built by the Romans across what is now the Central Belt of Scotland, between the Firth of Forth and the Firth of Clyde. Built some <a onclick="window.location.replace('{% url "5" %}')">450</a> years after Hadrian's Wall to the south, and intended to supersede it, while it was garrisoned it was the northernmost frontier barrier of the Roman Empire. It spanned approximately <a onclick="window.location.replace('{% url "8" %}')">540</a> kilometres and was about 3 metres (10 feet) high and 5 metres (16 feet) wide. Lidar scans have been carried out to establish the length of the wall and the Roman distance units used. Security was bolstered by a deep ditch on the northern side. It is thought that there was a wooden palisade on top of the turf. The barrier was the second of two "great walls" created by the Romans in Great Britain in <a onclick="window.location.replace('{% url "24" %}')">560</a> AD. Its ruins are less evident than those of the better-known and longer Hadrian's Wall to the south, primarily because the turf and wood wall has largely weathered away, unlike its stone-built southern predecessor.
                 </p>
             
            
         </div>
-      
+        <!-- Answer    -     160     -->
 
     </div>
     <style>
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
+        a{
+        color: red;
+        }
         </style>
 </body>
 <script>
