--- a/chub/templates/chub/Q2.html
+++ b/chub/templates/chub/Q2.html
@@ -27,7 +27,7 @@
 
         <div class="size3 ">
 
-            <p style="color: rgba(247, 234, 205, 0.91);"> My.Warden plans a long drive with his family on the 32nd Sunday of the year 2020 in his car which was gifted to him by the company in which he worked for more than 10 years. His car had 4 usual tyres and 1 spare tyre. Each tyre can travel 20,000 kms before wearing off. What is the maximum distance he can travel along with his family in his car?  
+            <p style="color: rgba(247, 234, 205, 0.91);"> Mr.Warden plans a long drive with his family on the 32nd Sunday of the year 2020 in his car which was gifted to him by the company in which he worked for more than 10 years. His car had 4 usual tyres and 1 spare tyre. Each tyre can travel 20,000 kms before wearing off. What is the maximum distance he can travel along with his family in his car?  
             </p><br><br>
 
 
