--- a/chub/templates/chub/guidelines.html
+++ b/chub/templates/chub/guidelines.html
@@ -27,19 +27,18 @@
 
         <div class="size3 flex ">
             <div class="size3 flex ">
-                <p><b>Read the Rules and Guidelines carefully as you won't be able read this page again</b></p>
-                <p> You went to a magical forest to find some super power. The forest being magical contains trees which can speak because it contains spirit of noble men who would guide only the deserving towards the super power. 
-                    At each turn the noble men would ask you one question and help you with the way ahead if you give the correct answer or send you to some other random tree, can be the one with whom you already had a talk before, on answering wrong. 
+                <p><b>Read the Rules and Guidelines carefully as you won't be able to read this page again</b></p>
+                <p> You went to a magical forest to find some superpower. The forest being magical contains trees that can speak because it contains the spirit of noblemen who would guide only the deserving towards the superpower. At each turn, the noblemen would ask you one question and help you with the way ahead if you give the correct answer or send you to some other random tree, can be the one with whom you already talked before, on answering wrong.
                 </p>
                 <p>The more wrong answers you give the more longer the way to the super power becomes.</p>
-                <p>There are two types of questions which the noble men would ask on the way.</p>
+                <p>There are two types of questions that the noblemen would ask on the way.</p>
                 <ul>
                     <li>Option type</li>
-                    <p>In these type of Questions the noble men would ask you a question and narrate a passage in front of you and you need to find the correct answer from the narrated passage. Clicking the correct answer would bring you closer to the super power while clicking wrong answer will carry you farther from the super power. </p>
+                    <p>In these types of Questions, the noblemen would ask you a question and narrate a passage in front of you and you need to find the correct answer from the narrated passage. Clicking the correct answer would bring you closer to the superpower while clicking the wrong answer will carry you farther from the superpower. </p>
                     <li>Submit type</li>
-                    <p>In this type of questions the noble men will ask you question and you need to tell the correct answer. Type the answer in the space provided and submit it. In case the answer is a word, you can submit it in any case thai is upper or lower case (your wish). </p>
+                    <p>In this type of question, the noblemen will ask you questions and you need to tell the correct answer. Type the answer in the space provided and submit it. In case the answer is a word, you can submit it in any case that is upper or lower case (your wish). </p>
                 </ul>
-                <p>Are you the derserving one to get the super power?? This is the chance to prove yourself. All the best!!!</p>
+                <p>Are you the deserving one to get the superpower?? This is the chance to prove yourself.</p>
                 <p>Note: The answers can be partial words or part of a word!! </p>
                 <p>All The Best!!!</p>
             </div>
