--- a/chub/templates/chub/Q14.html
+++ b/chub/templates/chub/Q14.html
@@ -27,7 +27,7 @@
 
         <div class="size3 ">
             <p style="color: rgba(247, 234, 205, 0.91);">
-                In the stock market, a person buys a stock and sells it on some future date. Given the stock prices of 12 days. Find out the maximum profit a person can make in at-most 4 transactions. A transaction is equivalent to (buying + selling) of a stock and new transaction can start only when the previous transaction has been completed. 
+                In the stock market, a person buys a stock and sells it on some future date. Given the stock prices of 12 days. Find out the maximum profit a person can make in at most 4 transactions. A transaction is equivalent to (buying + selling) of stock and a new transaction can start only when the previous transaction has been completed. 
             <br> 100 &emsp 180 &emsp 260 &emsp 310 &emsp 40  &emsp 535 &emsp 695 &emsp 165 &emsp 40 &emsp 440 &emsp 90 &emsp 360.
             </p>
                 <br>
