--- a/chub/templates/chub/Q19.html
+++ b/chub/templates/chub/Q19.html
@@ -31,14 +31,14 @@
            
 
                 <div class="size3  " style="color: rgba(247, 234, 205, 0.91);">
-                    Umang wanted to gift his parents a new house on their 26th anniversary, for which he has saved some amount of money but it was not enough. Luckily there was a game going on in the city from which he can win the remaining amount of money. He went to the organizers and booked his slot for playing the game. He received the instruction manual which stated the following "There is a house with 16 rooms in it. Each room has a treasure chest in it which contains a number in it. As you pass by the room you have to drop specified number of gold coins in the treasure chest. Find out the minimum number of gold coins you need before entering the house to reach from the top left room to bottom right room. 
-                    From a room, you can move in three directions: downwards , rightward and diagnally to the right and downward direction." <br> He ask for your help to crack this game. Can you help him beat the game and gift a house to his parents. The room structure is given below.
-                    <center>
+                    Mr.Raunak wanted to gift his parents a new house on their 26th anniversary, for which he has saved some amount of money but it was not enough. Luckily there was a game going on in the city from which he can win the remaining amount of money. He went to the organizers and booked his slot for playing the game. He received the instruction manual which stated the following "There is a house with 16 rooms in it. Each room has a treasure chest it which contains a number in it. As you pass by the room you have to drop the specified number of gold coins in the treasure chest. Find out the minimum number of gold coins you need before entering the house to reach from the top left room to the bottom right room. 
+                    From a room, you can move in three directions: downwards, rightward, and diagonally to the right and downward direction." <br> He asks for your help to crack this game. Can you help him beat the game and gift a house to his parents? The room structure is given below.
+                <center>
                         <div style="font-size:150%;">
-                            1 7 9 2 <br>
-                            8 6 3 2 <br>
-                            1 6 7 8 <br>
-                            2 9 8 2 <br>
+                            1 &emsp 7 &emsp 9 &emsp 2 <br>
+                            8 &emsp 6 &emsp 3 &emsp 2 <br>
+                            1 &emsp 6 &emsp 7 &emsp 8 <br>
+                            2 &emsp 9 &emsp 8 &emsp 2 <br>
                             <br><br>
                         </div>
                     </center>
